# authn

./: .gitignore  Cargo.nix  Cargo.toml  README.md  default.nix
sql/: new-database.bash  run-migrations.bash
sql/migrations/: 2021-09-17-init.sql
src/: client.rs  crypto.rs  database.rs  lib.rs  main.rs  models.rs  server.rs  test-config.json  test-priv-key.pem  test-pub-key.pem
