[package]
name = "authn"
version = "0.1.0"
edition = "2018"

[features]
server = [
	"http-mux",
	"plumb",
	"rusqlite",
]
cli = [
	"rpassword"
]

[[bin]]
name = "authn-utils"
# TODO: the cli currently manipulates the database directly, but it should not be doing that
# all operations should be done through the API
required-features = [ "cli", "server" ]

[[bin]]
name = "authn"
required-features = [ "server" ]

[dependencies]
tokio = { version = "1", features = ["full"] }
http-mux = { version = "0.1", features = ["hyper"], optional = true }
plumb = { version = "0.2", optional = true }
rusqlite = { version = "0.25", feautres = [ "bundled" ], optional = true }
quick_from = "0.1.0"
rust-argon2 = { version = "0.8", default-features = false }
jsonwebtoken = { version = "7.2" }
serde_json = "1"
rand = "0.8"
hyper = { version = "0.14", features = [ "tcp", "http1", "server", "client" ] }
hyperlocal = "0.8"
serde = { version = "1", features = ["derive"] }
rpassword = { version = "5", optional = true }

# these deps are shared with the above deps, so reuse the versions already
# pulled in
http = "*"

